--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Heading{
+    width: 45rem;
+    margin-bottom: 4rem;
+}
+
+hr{
+    border: 2px solid black;
+}
